# awesome-python

./: LICENSE  README.md  pyproject.toml
awesome-python/icecream/: ic.py
awesome-python/pyhumps/: simple_conversions.py
awesome-python/pylembic/: pylembic_test.py
